--- a/css/style.scss
+++ b/css/style.scss
@@ -1,8 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 #desk {
@@ -25,13 +24,11 @@
   height: 100px;
   margin: auto;
   margin-top: 100px;
-  background-color: #5e5e68;
+  background-color: rgb(94, 94, 104);
   text-align: center;
+  input {
+    height: 30px;
+    border: none;
+    border-radius: 5px;
+  }
 }
-
-.container input {
-  height: 30px;
-  border: none;
-  border-radius: 5px;
-}
-/*# sourceMappingURL=style.css.map */
