--- a/css/style.css
+++ b/css/style.css
@@ -34,4 +34,13 @@
   border: none;
   border-radius: 5px;
 }
+
+.caja {
+  color: red;
+  width: 50vw;
+  height: 100px;
+  margin: auto;
+  margin-top: 100px;
+  text-align: center;
+}
 /*# sourceMappingURL=style.css.map */
