--- a/css/style.scss
+++ b/css/style.scss
@@ -32,3 +32,12 @@
     border-radius: 5px;
   }
 }
+
+.caja {
+  color: red;
+  width: 50vw;
+  height: 100px;
+  margin: auto;
+  margin-top: 100px;
+  text-align: center;
+}
