--- a/css/style.css
+++ b/css/style.css
@@ -1,53 +1,84 @@
-* {
-  padding: 0;
-  margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  text-decoration: none;
-  list-style-type: none;
+body {
+  background-color: whitesmoke;
 }
 
-.list_prin {
-  width: 50%;
-  margin: auto;
-  padding: 10px;
+.box {
+  padding: 2rem;
+  border: 1px solid #444;
+}
+
+.container__box {
+  display: flex;
+  justify-content: center;
+}
+
+.d-none {
+  display: none;
+}
+
+.d-block {
+  display: block;
+  transform: rotate(10deg) translate(-200px);
+  -webkit-transform: rotate(10deg) translate(-200px);
+  -moz-transform: rotate(10deg) translate(-200px);
+  -ms-transform: rotate(10deg) translate(-200px);
+  -o-transform: rotate(10deg) translate(-200px);
+
+}
+
+.message__desktop {
+  display: none;
+  background-color: #000;
+  color: #fff;
   text-align: center;
-  text-decoration: none;
+  align-items: center;
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  justify-content: center;
 }
 
-.list_prin input {
-  padding: 7px;
+.message__desktop.open {
+  display: flex;
 }
 
-.list_prin button {
-  border: none;
-  padding: 10px;
-  color: white;
-  background-color: #5151f3;
-  border-radius: 10px;
+/* list users */
+.item__user {
+  transition: all linear .25s;
+  -webkit-transition: all linear .25s;
+  -moz-transition: all linear .25s;
+  -ms-transition: all linear .25s;
+  -o-transition: all linear .25s;
 }
 
-.list_prin li {
-  padding: 10px;
-  width: 80%;
-  margin: auto;
-  color: black;
-  border: 1px solid black;
-  border-radius: 3px;
-  background-color: #b7d0f7;
+.item__user:hover {
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, .175) !important;
 }
 
-.list_prin a {
-  color: red;
-  text-decoration: none;
+.icon__user {
+  width: 2rem;
+  height: 2rem;
+  background-size: cover;
 }
 
-.list_prin #adduserBtn {
-  border: 2px solid black;
-  background-color: #d4c8c8;
-  color: black;
-  padding: 10px;
-  width: 30%;
-  margin: auto;
+.img__user__profile {
+  max-width: 100px;
 }
-/*# sourceMappingURL=style.css.map */
+
+@media screen and (min-width: 768px) {
+  .d-block {
+    transform: rotate(0) translate(0);
+    -webkit-transform: rotate(0) translate(0);
+    -moz-transform: rotate(0) translate(0);
+    -ms-transform: rotate(0) translate(0);
+    -o-transform: rotate(0) translate(0);
+  }
+}
+
+@media print {
+  #showAll {
+    display: none;
+  }
+}
